--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Bienvenidos a la pagina del estudio Fotografico Fotocol 2018</h1>
-    <h2>Esta es la pagina donde podras ver nuestros trabajos</h2>
+    <p>Esta es la pagina donde podras ver nuestros trabajos</p>
 
 </body>
 
