--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Estudio Fotografico Fotocol 2018</title>
+    <style>
+        body {
+            background-color: red;
+        }
+    </style>
+
 </head>
 
 <body>
