Cambiando el color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Estudio Fotografico Fotocol 2018</title>
     <style>
         body {
-            background-color: red;
+            background-color: blueviolet;
         }
     </style>
 
