--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Estudio Fotografico Fotocol 2018</title>
     <style>
         body {
-            background-color: blueviolet;
+            background-color: rgb(0, 4, 255);
         }
     </style>
 
