--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         body {
             background-color: rgb(0, 4, 255);
         }
+
+        p{
+            font-size: 25px;
+        }
     </style>
 
 </head>
