--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <h1>Bienvenidos a la pagina del estudio Fotografico Fotocol 2018</h1>
     <p>Esta es la pagina donde podras ver nuestros trabajos</p>
 
+
+    <p>Texto de presentacion</p>
 </body>
 
 </html>
