--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Estudio Fotografico Fotocol 2018</title>
+    <title>Estudio Fotografico Fotocol 2018 online</title>
     <style>
         body {
             background-color: rgb(4, 255, 201);
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1>Bienvenidos a la pagina del estudio Fotografico Fotocol 2018</h1>
+    <h1>Bienvenidos a la pagina del estudio Fotografico Fotocol  en linea</h1>
     <p>Esta es la pagina donde podras ver nuestros trabajos</p>
 
 
