Creacion de la lista de elementos en la pagina Index

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
 
     <p>Texto de presentacion</p>
+
+
+    <ul>
+        <li>Primero elemento</li>
+        <li>Segundo Elelmento</li>
+        <li>Tercer Elemento</li>
+    </ul>
 </body>
 
 </html>
