Creacion de la lista con las opciones del menu

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <li>Segundo Elelmento</li>
         <li>Tercer Elemento</li>
     </ul>
+
+    <ul>
+        <li>Contacto</li>
+        <li>Servicios</li>
+        <li>Idioma</li>
+    </ul>
 </body>
 
 </html>
