Correccion del menu princiapl

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </ul>
 
     <ul>
-        <li>Contacto</li>
-        <li>Servicios</li>
-        <li>Idioma</li>
+        <li>Contacto de la Empresa.</li>
+        <li>Servicios de la Empresa.</li>
+        <li>Idioma.</li>
     </ul>
 </body>
 
