Eliminado el menu Servicios de la Empresa

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background-color: rgb(4, 255, 201);
         }
 
-        p{
+        p {
             font-size: 20px;
         }
     </style>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1>Bienvenidos a la pagina del estudio Fotografico Fotocol  en linea</h1>
+    <h1>Bienvenidos a la pagina del estudio Fotografico Fotocol en linea</h1>
     <p>Esta es la pagina donde podras ver nuestros trabajos</p>
 
 
@@ -33,9 +33,13 @@
     </ul>
 
     <ul>
-        <li><a href="#">Contacto de la Empresa.</a></li>
-        <li><a href="#">Servicios de la Empresa.</a> </li>
-        <li><a href="#">Contacto de la Empresa.</a> Idioma.</li>
+        <li>
+            <a href="#">Contacto de la Empresa.</a>
+        </li>
+
+        <li>
+            <a href="#">Idioma de la Empresa.</a>
+        </li>
     </ul>
 </body>
 
