Definido el id del menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Tercer Elemento</li>
     </ul>
 
-    <ul>
+    <ul id="nuevo">
         <li>
             <a href="#">Contacto de la Empresa.</a>
         </li>
