--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Tercer Elemento</li>
     </ul>
 
-    <ul id="nuevo">
+    <ul id="nuevo-menu">
         <li>
             <a href="#">Contacto de la Empresa.</a>
         </li>
